--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "2.8.5",
     "mysql2": "3.6.2",
     "moment-timezone": "0.5.43",
-    "axios": "1.6.0"
+    "axios": "1.6.0",
+    "moment": "2.29.4"
   }
 }
