--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "3.6.2",
     "moment-timezone": "0.5.43",
     "axios": "1.6.0",
-    "moment": "2.29.4"
+    "moment": "2.29.4",
+    "node-cron": "3.0.3"
   }
 }
